guides/weka/manifests/gateway/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-pd-disaggregation
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infra-pd-inference-gateway
  rules:
    - backendRefs:
        - group: inference.networking.x-k8s.io
          kind: InferencePool
          name: gaie-pd
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
